# panda-core

./: CMakeLists.txt  LICENSE
include/panda/: xlib.h
include/panda/core/: assert.h  class_traits.h  cube.h  fp_promotion.h  graph.h  matrix.h  mpl.h  soa.h  static_soa.h  timer.h  unordered_map.h  vector.h
include/panda/core/detail/: soa.hpp  static_soa.hpp  static_soa_macros.hpp  stl_static_soa.hpp
include/panda/core/impl/: unordered_map.hpp
include/panda/core/mpl/: conditional.h
src/core/: soa.cpp
test/: CMakeLists.txt  main.cpp  static_soa_test.cpp  unordered_map.cpp
test/include/panda/test/: generator.h
